--- a/Zypher/Components/Pages/Home.razor
+++ b/Zypher/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
-﻿@page "/home"
+﻿<!-- DEPRECATED: This file is no longer used in the project. -->
+@page "/homeplsdontgohere"
 @using Zypher.Services
 @using Newtonsoft.Json.Linq
 @using Microsoft.JSInterop
