--- a/Zypher/Components/Pages/Results.razor.css
+++ b/Zypher/Components/Pages/Results.razor.css
@@ -1,5 +1,4 @@
-﻿
-::deep body { /* Use ::deep if needed to pierce component boundaries for body */
+﻿ body { /* Use ::deep if needed to pierce component boundaries for body */
     background-color: #121212; /* Dark background */
     color: #e0e0e0; /* Light text */
     margin: 0;
