--- a/Zypher/Components/Pages/Login.razor
+++ b/Zypher/Components/Pages/Login.razor
@@ -26,7 +26,7 @@
         {
             await UserService.SetUsernameAsync(username);
             PopupStateService.IsPopupActive = false;
-            NavigationManager.NavigateTo("/multiplayer");
+            NavigationManager.NavigateTo("/selectmode");
         }
     }
 }
