--- a/Zypher/Components/Layout/MainLayout.razor
+++ b/Zypher/Components/Layout/MainLayout.razor
@@ -36,7 +36,7 @@
         
         if (NavigationManager.Uri.EndsWith("/login") == false)
         {
-            //NavigationManager.NavigateTo("/login", true); 
+            NavigationManager.NavigateTo("/login", true); 
         }
     }
     
