--- a/Zypher/Components/App.razor
+++ b/Zypher/Components/App.razor
@@ -18,7 +18,8 @@
 
 <body>
     <Routes @rendermode=InteractiveServer />
-    <script src="_framework/blazor.web.js"></script>
+<script src="_framework/blazor.web.js"></script>
+<script src="scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
